- acces la nivel de celula - grija la posibile isntante de excel car raman sa ruleze in fundal

--- a/POC_Excel/POC_Excel.csproj
+++ b/POC_Excel/POC_Excel.csproj
@@ -73,7 +73,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <None Include="Lista studenti.xlsx">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
